tests/snapshots/integration_tests__example_22-xor.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Uses ===
use nn::* (source: core)

=== Neurons ===

neuron XOR:
  inputs:
    default: [batch, 2]
  outputs:
    default: [batch, 1]
  graph:
    in -> Linear#0(2, 4)
    Linear#0(2, 4) -> hidden
    hidden -> ReLU#1()
    ReLU#1() -> activated
    activated -> Linear#2(4, 1)
    Linear#2(4, 1) -> logits
    logits -> Sigmoid#3()
    Sigmoid#3() -> out

neuron XORDeep:
  inputs:
    default: [batch, 2]
  outputs:
    default: [batch, 1]
  graph:
    in -> Linear#8(2, 8)
    Linear#8(2, 8) -> ReLU#9()
    ReLU#9() -> Linear#10(8, 8)
    Linear#10(8, 8) -> ReLU#11()
    ReLU#11() -> Linear#12(8, 4)
    Linear#12(8, 4) -> ReLU#13()
    ReLU#13() -> Linear#14(4, 1)
    Linear#14(4, 1) -> Sigmoid#15()
    Sigmoid#15() -> out

neuron XORExplicit:
  inputs:
    default: [batch, 2]
  outputs:
    default: [batch, 1]
  graph:
    in -> Linear#4(2, 4)
    Linear#4(2, 4) -> hidden
    hidden -> ReLU#5()
    ReLU#5() -> activated
    activated -> Linear#6(4, 1)
    Linear#6(4, 1) -> logits
    logits -> Sigmoid#7()
    Sigmoid#7() -> out
