tests/snapshots/integration_tests__example_24-trm_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Unexpected { found: "Ident(\"let\")", span: SourceSpan { offset: SourceOffset(2794), length: 3 } }
