tests/snapshots/integration_tests__example_26-palindrome.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Uses ===
use nn::* (source: core)

=== Neurons ===

neuron IsPalindromeAttention(vocab_size, max_len):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, 1]
  graph:
    in -> Embedding#3(vocab_size, 32)
    Embedding#3(vocab_size, 32) -> embedded
    embedded -> PositionalEncoding#4(32, max_len=max_len)
    PositionalEncoding#4(32, max_len=max_len) -> positioned
    positioned -> MultiHeadSelfAttention#5(32, 4)
    MultiHeadSelfAttention#5(32, 4) -> attended
    attended -> Linear#6(32, 1)
    Linear#6(32, 1) -> Sigmoid#7()
    Sigmoid#7() -> out

neuron IsPalindromeNaive(vocab_size):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, 1]
  graph:
    in -> Embedding#0(vocab_size, 16)
    Embedding#0(vocab_size, 16) -> Linear#1(16, 1)
    Linear#1(16, 1) -> Sigmoid#2()
    Sigmoid#2() -> out
