tests/snapshots/integration_tests__example_26-palindrome_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Expected { expected: "identifier", found: "Arrow", span: SourceSpan { offset: SourceOffset(492), length: 2 } }
