tests/snapshots/integration_tests__example_27-addition.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Uses ===
use nn::* (source: core)

=== Neurons ===

neuron Addition:
  inputs:
    default: [batch, 2]
  outputs:
    default: [batch, 1]
  graph:
    in -> Linear#0(2, 1)
    Linear#0(2, 1) -> out

neuron AdditionMLP:
  inputs:
    default: [batch, 2]
  outputs:
    default: [batch, 1]
  graph:
    in -> Linear#1(2, 8)
    Linear#1(2, 8) -> ReLU#2()
    ReLU#2() -> Linear#3(8, 1)
    Linear#3(8, 1) -> out

neuron MultiDigitAddition(vocab_size):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, vocab_size]
  graph:
    in -> Embedding#4(vocab_size, 64)
    Embedding#4(vocab_size, 64) -> embedded
    embedded -> PositionalEncoding#5(64, max_len=32)
    PositionalEncoding#5(64, max_len=32) -> positioned
    positioned -> TransformerBlock#6(64, 4, 256)
    TransformerBlock#6(64, 4, 256) -> features
    features -> Linear#7(64, vocab_size)
    Linear#7(64, vocab_size) -> out
