tests/snapshots/integration_tests__example_27-addition_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Expected { expected: "identifier", found: "Arrow", span: SourceSpan { offset: SourceOffset(600), length: 2 } }
